#
# Copyright (c) 2004-2005 The Trustees of Indiana University.
#                         All rights reserved.
# Copyright (c) 2004-2005 The Trustees of the University of Tennessee.
#                         All rights reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

include $(top_srcdir)/config/Makefile.options

SUBDIRS = \
	allocator \
        coll \
        common \
        gpr \
        io \
        mpool \
        ns \
        one \
        oob \
	pcmclient \
	pls \
        pml \
        ptl \
	orte_ras \
	orte_rds \
	orte_rmaps \
	orte_rmgr \
        soh \
        svc \
        topo
