#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved. 
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

noinst_LTLIBRARIES = libmca_installdirs_config.la

libmca_installdirs_config_la_SOURCES = \
	install_dirs.h \
	opal_installdirs_config.c
